SERVER-22167: Move fixDocuments up earlier in the insert path to ensure it runs