jstests/noPassthroughWithMongod/bench_test_crud_commands.js
@@ -6,6 +6,19 @@
     coll.drop();
     assert.commandWorked(coll.getDB().createCollection(coll.getName()));
 
+    function makeDocument(docSize) {
+        var doc = { "fieldName":"" };
+        var longString = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx";
+        while(Object.bsonsize(doc) < docSize) {
+            if (Object.bsonsize(doc) < docSize - longString.length) {
+                doc.fieldName += longString;
+            } else {
+                doc.fieldName += "x";
+            }
+        }
+        return doc;
+    }
+
     function executeBenchRun(benchOps) {
         var benchArgs = {ops: benchOps, parallel: 2, seconds: 1, host: db.getMongo().host};
         if (jsTest.options().auth) {
@@ -16,17 +29,13 @@
         return benchRun(benchArgs);
     }
 
-    function testInsert(writeCmd, wc) {
+    function testInsert(docs, writeCmd, wc) {
         coll.drop();
 
-        var docs = [];
-        for (var i = 0; i < 100; i++) {
-            docs.push({x: 1});
-        }
         var res = executeBenchRun([{ns: coll.getFullName(),
                                     op: "insert",
                                     doc: docs,
-                                    writeCmd: writeCmd, 
+                                    writeCmd: writeCmd,
                                     writeConcern : wc}]);
 
         assert.gt(coll.count(), 0);
@@ -61,10 +70,23 @@
         assert.gt(res.findOne, 0, tojson(res));
     }
 
-    testInsert(false, {});
-    testInsert(true, {"writeConcern" : {"w" : "majority"}});
-    testInsert(true, {"writeConcern" : {"w" : 1, "j": false}});
-    testInsert(true, {"writeConcern" : {"j" : true}});
+    function testWriteConcern(writeCmd) {
+        var bigDoc = makeDocument(260 * 1024);
+        var docs = [];
+        for (var i = 0; i < 100; i++) {
+            docs.push({x: 1});
+        }
+
+        testInsert([bigDoc], writeCmd, {});
+        testInsert(docs, writeCmd, {});
+        testInsert(docs, writeCmd, {"writeConcern" : {"w" : "majority"}});
+        testInsert(docs, writeCmd, {"writeConcern" : {"w" : 1, "j": false}});
+        testInsert(docs, writeCmd, {"writeConcern" : {"j" : true}});
+    }
+
+    testWriteConcern(false);
+    testWriteConcern(true);
+
     testFind(false);
     testFind(true);
     testFindOne(false);
